--- a/public/css/landing.css
+++ b/public/css/landing.css
@@ -1,6 +1,6 @@
 /* Global Styles */
 :root {
-    --primary-color: #32F1A1;
+    --primary-color: #3928a7;
     --dark-color: #141414;
     --light-color: #f4f4f4;
 }
@@ -344,7 +344,7 @@ img {
 .footer {
     position: relative;
     bottom: 0;
-    background-color:#32F1A1;
+    background-color:#3928a7;
     width: 100%;
     height: 300px;
     margin-top: 50px;
