--- a/public/css/landing.css
+++ b/public/css/landing.css
@@ -46,7 +46,7 @@ img {
     width: 100%;
     height: 100vh;
     position: relative;
-    background: url('https://i.pinimg.com/originals/1a/ee/5c/1aee5c344846f449350feae457ea350e.jpg') no-repeat center center/cover;
+    background: url('https://preview.free3d.com/img/2017/07/2408200291309585928/swv4ohww.jpg') no-repeat center center/cover;
 }
 
 .showcase::after {
